# dd-trace-java

./: .claude-invariants.md  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  .typos.toml  AGENTS.md  ANTITHESIS_ASSERTIONS.md  ARCHITECTURE.md  BUILDING.md  CLAUDE.local.md  CONTRIBUTING.md  COUNTERS_VS_RATES_EXPLAINED.md  CoreTracer.java.~REMOTE  Dockerfile  EXPORT_VARIABLES_GUIDE.md  FINAL_STATUS.md  FLARE_FILE_DATA_SOURCE.md  FUZZER_SUMMARY.txt  FUZZ_QUICKSTART.md  FUZZ_README.md  HOW_TO_USE_FLARE_FILES.md  IMPLEMENTATION_DEPENDENCIES.md  IMPLEMENTATION_LOAD_PROFILE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TRACE_STATISTICS.md  JAVA_TRACER_FLARE_STATUS.md  LICENSE  LICENSE-3rdparty.csv  NATIVE_IMAGE_FIX_STATUS.md  NOTICE  PLAN.jsonc  README.md  RESILIENCE4J_QUICK_REFERENCE.md  RESILIENCE4J_TEST_REPORT.md  SECURITY.md  SUPPORT.md  TEST_VALIDATION_SUMMARY.md  TRACER_FLARE_ACTION_ITEMS.md  (+87 more)
.circleci/: autoforward.py  cancel_workflow.sh  check_for_leftover_files.sh  checkout_merge_commit.sh  collect_libs.sh  collect_muzzle_deps.sh  collect_profiles.sh  collect_reports.sh  collect_results.sh  config.continue.yml.j2  config.yml  copy_artifact_s3.py  early_return_for_forked_pull_requests.sh  expand_gradle_targets.sh  fetch_docker_images.sh  generate_cache_ids.sh  no_circleci_changes.sh  prepare_docker_env.sh  (+8 more)
internal-api/src/main/java/datadog/trace/bootstrap/config/provider/library-config-java/: Cargo.toml  JavaConfigurator.java  README.md
internal-api/src/main/java/datadog/trace/bootstrap/config/provider/library-config-java/src/: lib.rs
(+23450 files in other folders)
